[gd_scene load_steps=3 format=3 uid="uid://dx713j6fgpf0f"]

[ext_resource type="Script" path="res://Base Objects (Parent Classes)/Scripts/BaseHabitat.gd" id="1_ewfb5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bsohf"]
animations = [{
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="BaseHabitat" type="Node2D" groups=["Habitats", "Savable Objects"]]
y_sort_enabled = true
script = ExtResource("1_ewfb5")

[node name="HabitatArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HabitatArea"]
polygon = PackedVector2Array(6, -42, 51, -15, 53, 21, 25, 42, -8, 42, -52, 16, -50, -10)

[node name="ProximityArea" type="Area2D" parent="."]
position = Vector2(-5, -2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ProximityArea"]
position = Vector2(2, 0)
polygon = PackedVector2Array(1, -61, 96, 1, 3, 66, -90, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_bsohf")
animation = &"new_animation"

[node name="CrittersButton" type="Button" parent="."]
visible = false
offset_left = 25.0
offset_top = -83.0
offset_right = 91.0
offset_bottom = -52.0
text = "Critters"

[node name="PositionMarkers" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="PositionMarkers"]
position = Vector2(-68, 0)

[node name="Marker2" type="Marker2D" parent="PositionMarkers"]
position = Vector2(79, 0)

[connection signal="input_event" from="HabitatArea" to="." method="_on_habitat_area_input_event"]
[connection signal="area_entered" from="ProximityArea" to="." method="_on_proximity_area_entered"]
[connection signal="area_exited" from="ProximityArea" to="." method="_on_proximity_area_exited"]
